--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
+    "@headlessui/react": "^1.7.17",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-compare-slider": "^3.0.1",
+    "react-dom": "^18",
+    "react-loader-spinner": "^5.4.5",
+    "react-uploader": "^3.43.0"
   },
   "devDependencies": {
     "@types/node": "^20",
